--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,62 +9,98 @@
     android:gravity="center"
     android:orientation="vertical"
     >
-    <Button
-        android:id="@+id/ping"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="命令"
-        />
-    <Button
-        android:id="@+id/create_conn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="创建socket连接"
-        />
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_ip"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="-----"
+                android:gravity="center"
+                />
+            <TextView
+                android:id="@+id/tv_dfData"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="接收对方信息"
+                android:gravity="center"
+                />
+            <EditText
+                android:id="@+id/tv_ip2"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="输入对方的ip"
+                android:gravity="center"
+                />
+            <TextView
+                android:id="@+id/tv_data"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="-----"
+                android:gravity="center"
+                />
+            <Button
+                android:id="@+id/ping"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="命令"
+                />
+            <Button
+                android:id="@+id/create_conn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="创建socket连接"
+                />
 
-    <Button
-        android:id="@+id/send_msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="发送消息"
-        />
+            <Button
+                android:id="@+id/send_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="发送消息"
+                />
 
-    <Button
-        android:id="@+id/callback_msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="发送有回调的消息"
-        />
+            <Button
+                android:id="@+id/callback_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="发送有回调的消息"
+                />
 
-    <Button
-        android:id="@+id/start_heart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="启动心跳检测"
-        />
+            <Button
+                android:id="@+id/start_heart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="启动心跳检测"
+                />
 
-    <Button
-        android:id="@+id/progress_msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="带进度条的请求"
-        />
+            <Button
+                android:id="@+id/progress_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="带进度条的请求"
+                />
 
 
-    <Button
-        android:id="@+id/control_conn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="连接的控制"
-        />
+            <Button
+                android:id="@+id/control_conn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="连接的控制"
+                />
 
-    <Button
-        android:id="@+id/destroy_conn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="销毁socket连接"
-        />
-
+            <Button
+                android:id="@+id/destroy_conn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="销毁socket连接"
+                />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 
 </LinearLayout>
